<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">TumeKyouen</string>

	<string name="puzzle">start</string>
	<string name="get_more">get more</string>
	<string name="get_more_loading">loading</string>
	<string name="create_stage">create stage</string>
	<string name="twitter_connect">connect twitter</string>

	<string name="sound_description"></string>

	<string name="button_prev">prev</string>
	<string name="button_next">next</string>
	<string name="check_kyouen">Check kyouen</string>
	<string name="text_initializing">initializing&#8230;</string>
	<string name="text_x10">x10</string>

	<string name="alert_less_stone">Select 4 stones.</string>
	<string name="alert_not_kyouen">Not kyouen.</string>
	<string name="alert_install_kyouenchecker">Do you install kyouenchecker?</string>
	<string name="alert_error_authenticate_twitter">Twitter authentication is failed.</string>

	<string name="dialog_title_stage_get">Get stages</string>
	<string name="dialog_title_stage_select">Select stage</string>
	<string name="dialog_stage_count">stage count</string>
	<string name="dialog_stage_no">stage no</string>
	<string name="dialog_all_check">All</string>
	<string name="dialog_first">first</string>
	<string name="dialog_last">last</string>
	<string name="dialog_cancel">Cancel</string>
	<string name="dialog_get">get</string>
	<string name="dialog_select">select</string>

	<string name="kyouen">Kyouen!!</string>

	<string name="toast_get_stage">get %1$d stage(s).</string>
	<string name="toast_no_stage">No available data.</string>
	
	<string name="notification_new_stage">New stage added.</string>
</resources>
