<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/title_background"
    android:baselineAligned="false"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="30dp"
            android:shadowColor="#000000"
            android:shadowRadius="5.0"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="42sp"
            />
        <Button
            android:id="@+id/start_puzzle_button"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/puzzle"
            android:textSize="32sp"
            />
        <TextView
            android:id="@+id/stage_count"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="10dp"
            android:shadowColor="#000000"
            android:shadowRadius="5.0"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            />
        <Button
            android:id="@+id/get_stage_button"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/get_more"
            android:textSize="32sp"
            />
        <Button
            android:id="@+id/create_stage_button"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/create_stage"
            android:textSize="32sp"
            />
        <ImageView
            android:id="@+id/sound_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="90dp"
            android:src="@drawable/sound_on"
            android:contentDescription="@string/sound_description"
            />
    </LinearLayout>

	<LinearLayout 
		android:id="@+id/ad_layout"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="left"
		/>
</LinearLayout>
