<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/dialog_text"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:text="@string/dialog_stage_no"
            />
        <EditText
            android:id="@+id/dialog_number"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:hint=""
            android:singleLine="true"
            android:inputType="number"
            />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
	    <CheckBox
	        android:id="@+id/dialog_first"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/dialog_first"
	        />
	    <CheckBox
	        android:id="@+id/dialog_last"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/dialog_last"
	        />
    </LinearLayout>

</LinearLayout>