<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
    android:background="@drawable/title_background"
	>
	<LinearLayout
		android:id="@+id/stage_view"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_margin="10dp"
		>
		<Button
			android:id="@+id/prev_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_prev"
			/>
		<LinearLayout
		    android:id="@+id/stage_no_layout"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical"
			android:layout_margin="5dp"
			>
			<TextView
				android:id="@+id/stage_no"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textSize="32sp"
				/>
			<TextView
				android:id="@+id/stage_creator"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="right"
				android:textSize="10sp"
				/>
		</LinearLayout>
		<Button
			android:id="@+id/next_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_next"
			/>
	</LinearLayout>
	<FrameLayout
		android:id="@+id/frame_layout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>
		<TableLayout
			android:id="@+id/layout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="#00FF00"
			>
		</TableLayout>
	</FrameLayout>
	<Button
		android:id="@+id/kyouen_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/check_kyouen"
		android:layout_margin="20dp"
		/>
	<LinearLayout 
		android:id="@+id/ad_layout"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom"
		/>
</LinearLayout>